--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -20,46 +20,90 @@
 }
 
 html {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: 'Noto Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-	color: var(--main-text-color);
-	background-color: var(--main-bg-color);
+  font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
 }
 
 body.custom-background {
-	background-color: var(--main-bg-color);
-	background-image: url('/assets/image/bg/2021-1-2-12-38-15.jpg');
-	background-repeat: no-repeat;
-	background-position: top center;
-	background-attachment: fixed;
-	background-size: cover;
+  background-color: var(--main-bg-color);
+  background-image: url("/assets/image/bg/2021-1-2-12-38-15.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-*, *:before, *:after {
+/**, *:before, *:after {
 	box-sizing: inherit;
+}*/
+
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
-	text-align: center;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    color: var(--main-text-color);
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  text-align: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: var(--main-text-color);
 }
 
 h1 {
-	font-size: 1.5rem;
-	line-height: 1.5rem;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
 }
 
 h2 {
-	font-size: 1.2rem;
-	line-height: 1.2rem;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
 }
 
 h3 {
-	font-size: 1.0rem;
-	line-height: 1.0rem;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+video {
+  /* override other styles to make responsive */
+  width: 100% !important;
+  height: auto !important;
+}
+
+.video_youtube {
+  width: fit-content !important;
+  height: fit-content !important;
+  max-width: fit-content !important;
+  max-height: fit-content !important;
+  text-align: center;
+  margin: 0 auto;
+}
+
+a,
+a:link,
+a:visited {
+  color: rgb(0, 155, 60);
+}
+a:hover {
+  color: rgb(100, 255, 100);
+}
+
+.footer-link {
+  color: var(--main-text-color);
 }
