--- a/template/index.tpl.html
+++ b/template/index.tpl.html
@@ -134,11 +134,11 @@
 
 		<div class="footer">
 			<div class="center">
-				<a href="https://www.youtube.com/channel/UCAP6bWBoRYX7XGsSJYbMzmA" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-youtube" style="color: #f42929;"></i> YouTube</a>
-				<a href="https://www.instagram.com/valeria.fadeeva.me/" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-instagram" style="color: #cd2e96;"></i> Instagram</a>
-				<a href="https://www.twitch.tv/valeria_fadeeva" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-twitch" style="color: #be4be4;"></i> Twitch</a>
-				<!--<a href="/donate" type="button" class="btn btn-dark "><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Поддержать</a>-->
-                <a href="https://donate.stream/ya4100115921160758" target="_blank" type="button" class="btn btn-dark"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Стать спонсором</a>
+				<a href="https://www.youtube.com/channel/UCAP6bWBoRYX7XGsSJYbMzmA" target="_blank" type="button" class="btn btn-dark footer-link"><i class="fab fa-youtube" style="color: #f42929;"></i> YouTube</a>
+				<a href="https://www.instagram.com/valeria.fadeeva.me/" target="_blank" type="button" class="btn btn-dark footer-link"><i class="fab fa-instagram" style="color: #cd2e96;"></i> Instagram</a>
+				<a href="https://www.twitch.tv/valeria_fadeeva" target="_blank" type="button" class="btn btn-dark footer-link"><i class="fab fa-twitch" style="color: #be4be4;"></i> Twitch</a>
+				<!--<a href="/donate" type="button" class="btn btn-dark footer-link"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Поддержать</a>-->
+                <a href="https://donate.stream/ya4100115921160758" target="_blank" type="button" class="btn btn-dark footer-link"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Стать спонсором</a>
 			</div>
 
 			<div class="scroll-panel">
