--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -9,6 +9,12 @@
 	line-height: 1rem;	
 }
 
+.footer a,
+.footer a:link,
+.footer a:visited {
+	color: var(--main-text-color);
+}
+
 .scroll-panel {
 	display: none;
 }
