--- a/template/_main_page_.tpl.html
+++ b/template/_main_page_.tpl.html
@@ -39,7 +39,7 @@
 								<div class="card" style="width: 100%">
 									<div class="card-header">Products:</div>
 									<div class="card-body">
-										<div class="video_youtube">
+										<div style="--aspect-ratio:16/9;">
 											<iframe width="560" height="315" src="https://www.youtube.com/embed/w2iepQrS6Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 										</div>
 									</div>
