--- a/template/index.tpl.html
+++ b/template/index.tpl.html
@@ -1,159 +1,177 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
-	<head>
-		<!-- Required meta tags always come first -->
-		<meta charset="utf-8">
-		<noscript><meta http-equiv="refresh" content="0; URL=/badbrowser.php"></noscript>
-		<meta http-equiv="Content-Language" content="ru-RU">
 
-		<meta name="msapplication-tap-highlight" content="no">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="HandheldFriendly" content="true">
+<head>
+	<!-- Required meta tags always come first -->
+	<meta charset="utf-8">
+	<noscript>
+		<meta http-equiv="refresh" content="0; URL=/badbrowser.php">
+	</noscript>
+	<meta http-equiv="Content-Language" content="ru-RU">
 
-		<title>Valeria.Fadeeva.me</title>
-		<meta name="title" content="Valeria.Fadeeva.me">
-		<meta name="description" content="Valeria.Fadeeva.me">
-		<meta name="keywords" content="персона, человек, хобби, работа">
-		<meta name="author" content="Валерия Фадеева"  href="https://github.com/Valeria-Fadeeva">
-		<link rel="canonical" href="https://fadeeva.me">
-		<link rel="image_src" href="/assets/ico/favicon.png">
+	<meta name="msapplication-tap-highlight" content="no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="HandheldFriendly" content="true">
 
-		<meta property="og:site_name" content="Valeria.Fadeeva.me">
-		<meta property="og:title" content="Valeria.Fadeeva.me">
-		<meta property="og:description" content="Valeria.Fadeeva.me">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://fadeeva.me">
-		<meta property="og:image" content="/assets/ico/favicon.png">
+	<title>Valeria.Fadeeva.me</title>
+	<meta name="title" content="Valeria.Fadeeva.me">
+	<meta name="description" content="Valeria.Fadeeva.me">
+	<meta name="keywords" content="персона, человек, хобби, работа">
+	<meta name="author" content="Валерия Фадеева" href="https://github.com/Valeria-Fadeeva">
+	<link rel="canonical" href="https://fadeeva.me">
+	<link rel="image_src" href="/assets/ico/favicon.png">
 
-		<!-- Favicons -->
-		<link rel="shortcut icon" href="/assets/ico/favicon.png" type="image/png">
+	<meta property="og:site_name" content="Valeria.Fadeeva.me">
+	<meta property="og:title" content="Valeria.Fadeeva.me">
+	<meta property="og:description" content="Valeria.Fadeeva.me">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://fadeeva.me">
+	<meta property="og:image" content="/assets/ico/favicon.png">
 
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="/vendor/twbs/bootstrap/dist/css/bootstrap.min.css">
-		<!--FontAwesome CSS -->
-		<link rel="stylesheet" href="/vendor/components/font-awesome/css/all.min.css">
+	<!-- Favicons -->
+	<link rel="shortcut icon" href="/assets/ico/favicon.png" type="image/png">
 
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="/vendor/twbs/bootstrap/dist/css/bootstrap.min.css">
+	<!--FontAwesome CSS -->
+	<link rel="stylesheet" href="/vendor/components/font-awesome/css/all.min.css">
 
-		<!--Site CSS -->
-		<link rel="stylesheet" href="/assets/css/base.css">
-		<link rel="stylesheet" href="/assets/css/media.css">
-		<link rel="stylesheet" href="/assets/css/position.css">
-		<link rel="stylesheet" href="/assets/css/main-menu.css">
-		<link rel="stylesheet" href="/assets/css/head-panel.css">
-		<link rel="stylesheet" href="/assets/css/main-container.css">
-		<link rel="stylesheet" href="/assets/css/avatar.css">
-		<link rel="stylesheet" href="/assets/css/card.css">
-        <link rel="stylesheet" href="/assets/css/elements-animate.css">
-		<link rel="stylesheet" href="/assets/css/accordion.css">
-		<link rel="stylesheet" href="/assets/css/footer.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap">
 
-		<!-- Yandex.Metrika counter -->
-		<script type="text/javascript" >
-		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+	<!--Site CSS -->
+	<link rel="stylesheet" href="/assets/css/base.css">
+	<link rel="stylesheet" href="/assets/css/media.css">
+	<link rel="stylesheet" href="/assets/css/position.css">
+	<link rel="stylesheet" href="/assets/css/main-menu.css">
+	<link rel="stylesheet" href="/assets/css/head-panel.css">
+	<link rel="stylesheet" href="/assets/css/main-container.css">
+	<link rel="stylesheet" href="/assets/css/avatar.css">
+	<link rel="stylesheet" href="/assets/css/card.css">
+	<link rel="stylesheet" href="/assets/css/elements-animate.css">
+	<link rel="stylesheet" href="/assets/css/accordion.css">
+	<link rel="stylesheet" href="/assets/css/footer.css">
+
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
 		ym(84386332, "init", {
-				clickmap:true,
-				trackLinks:true,
-				accurateTrackBounce:true,
-				webvisor:true
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
 		});
-		</script>
-		<noscript><div><img src="https://mc.yandex.ru/watch/84386332" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-		<!-- /Yandex.Metrika counter -->
-	</head>
-	<body class="body custom-background">
-		<div id="main-menu" class="main-menu-container">
-			<nav class="navbar navbar-expand-lg fixed navbar-dark bg-dark">
-				<div class="container-fluid">
-					<a href="/" class="navbar-brand">
-						<img src="/assets/ico/favicon_32.png" class="avatar_32">
-						<em>Valeria.Fadeeva.me</em>
-					</a>
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/84386332" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+	<!-- /Yandex.Metrika counter -->
+</head>
 
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
+<body class="body custom-background">
+	<div id="main-menu" class="main-menu-container">
+		<nav class="navbar navbar-expand-lg fixed navbar-dark bg-dark">
+			<div class="container-fluid">
+				<a href="/" class="navbar-brand">
+					<img src="/assets/ico/favicon_32.png" class="avatar_32">
+					<em>Valeria.Fadeeva.me</em>
+				</a>
 
-					<div class="collapse navbar-collapse" id="navbarText">
-						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-							<li class="nav-item" aria-current="page">
-								<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
-							</li>
-							<!--<li class="nav-item">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+					aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarText">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item" aria-current="page">
+							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
+						</li>
+						<!--<li class="nav-item">
 								<a class="nav-link" href="/roadmap">Планы</a>
 							</li>-->
-							<li class="nav-item">
-								<a href="tg://resolve?domain=Valeria_Fadeeva" target="_blank" class="nav-link">
-								<i class="fab fa-telegram" style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> Telegram
+						<li class="nav-item">
+							<!--<a href="tg://resolve?domain=Valeria_Fadeeva_me" target="_blank" class="nav-link">-->
+							<a href="https://t.me/Valeria_Fadeeva_me" target="_blank" class="nav-link"></a>
+							<i class="fab fa-telegram"
+								style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> Telegram
 							</a>
-							</li>
-							<li class="nav-item">
-								<a href="https://www.facebook.com/valeria.fadeeva.me/" target="_blank" class="nav-link">
-								<i class="fab fa-facebook" style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> FaceBook
+						</li>
+						<li class="nav-item">
+							<a href="https://www.facebook.com/valeria.fadeeva.me/" target="_blank" class="nav-link">
+								<i class="fab fa-facebook"
+									style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> FaceBook
 							</a>
-							</li>
-							<li class="nav-item">
-								<a href="https://github.com/Valeria-Fadeeva" target="_blank" class="nav-link">
-								<i class="fab fa-github" style="background-color: #000000; color: #ffffff; border-radius: 50%;"></i> GitHub
+						</li>
+						<li class="nav-item">
+							<a href="https://github.com/Valeria-Fadeeva" target="_blank" class="nav-link">
+								<i class="fab fa-github"
+									style="background-color: #000000; color: #ffffff; border-radius: 50%;"></i> GitHub
 							</a>
-							</li>
-						</ul>
-					</div>
+						</li>
+					</ul>
 				</div>
-			</nav>
-		</div>
+			</div>
+		</nav>
+	</div>
 
-		<div class="container-fluid head-panel">
-			<div class="content">
-				<div class="container">
-					<div class="site-post clearfix">
-						<h3 class="site-post-title"><i>HAPPY - Let's go to explore the sea</i></h3>
-						<p class="site-post-meta"></p>
-					</div>
+	<div class="container-fluid head-panel">
+		<div class="content">
+			<div class="container">
+				<div class="site-post clearfix">
+					<h3 class="site-post-title"><i>HAPPY - Let's go to explore the sea</i></h3>
+					<p class="site-post-meta"></p>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div id="main-container" class="container-fluid main-container">
-			<div class="content">
-				<div class="container main-panel">
-{CONTENT}
-				</div>
+	<div id="main-container" class="container-fluid main-container">
+		<div class="content">
+			<div class="container main-panel">
+				{CONTENT}
 			</div>
 		</div>
+	</div>
 
-		<div class="footer">
-			<div class="center">
-				<a href="https://www.youtube.com/channel/UCAP6bWBoRYX7XGsSJYbMzmA" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-youtube" style="color: #f42929;"></i> YouTube</a>
-				<a href="https://www.instagram.com/valeria.fadeeva.me/" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-instagram" style="color: #cd2e96;"></i> Instagram</a>
-				<a href="https://www.twitch.tv/valeria_fadeeva" target="_blank" type="button" class="btn btn-dark"><i class="fab fa-twitch" style="color: #be4be4;"></i> Twitch</a>
-				<!--<a href="/donate" type="button" class="btn btn-dark"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Поддержать</a>-->
-                <a href="https://donate.stream/ya4100115921160758" target="_blank" type="button" class="btn btn-dark"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Стать спонсором</a>
-			</div>
-
-			<div class="scroll-panel">
-				<div class="btn btn-dark to-down">
-					<i class="fas fa-chevron-circle-down"></i>
-				</div>
-				<div class="btn btn-dark to-top">
-					<i class="fas fa-chevron-circle-up"></i>
-				</div>
-			</div>
+	<div class="footer">
+		<div class="center">
+			<a href="https://www.youtube.com/channel/UCAP6bWBoRYX7XGsSJYbMzmA" target="_blank" type="button"
+				class="btn btn-dark"><i class="fab fa-youtube" style="color: #f42929;"></i> YouTube</a>
+			<a href="https://www.instagram.com/valeria.fadeeva.me/" target="_blank" type="button"
+				class="btn btn-dark"><i class="fab fa-instagram" style="color: #cd2e96;"></i> Instagram</a>
+			<a href="https://www.twitch.tv/valeria_fadeeva" target="_blank" type="button" class="btn btn-dark"><i
+					class="fab fa-twitch" style="color: #be4be4;"></i> Twitch</a>
+			<!--<a href="/donate" type="button" class="btn btn-dark"><i class="fas fa-money-check-alt" style="color: #64ef07;"></i> Поддержать</a>-->
+			<a href="https://donate.stream/ya4100115921160758" target="_blank" type="button" class="btn btn-dark"><i
+					class="fas fa-money-check-alt" style="color: #64ef07;"></i> Стать спонсором</a>
 		</div>
 
-		<!-- Jquery JS -->
-		<script src="/vendor/components/jquery/jquery.min.js"></script>
+		<div class="scroll-panel">
+			<div class="btn btn-dark to-down">
+				<i class="fas fa-chevron-circle-down"></i>
+			</div>
+			<div class="btn btn-dark to-top">
+				<i class="fas fa-chevron-circle-up"></i>
+			</div>
+		</div>
+	</div>
 
-		<!-- Bootstrap JS -->
-		<script src="/vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Jquery JS -->
+	<script src="/vendor/components/jquery/jquery.min.js"></script>
 
-		<script src="/assets/js/stylefix.js"></script>
+	<!-- Bootstrap JS -->
+	<script src="/vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-		<script src="/assets/js/base.js"></script>
-	</body>
+	<script src="/assets/js/stylefix.js"></script>
+
+	<script src="/assets/js/base.js"></script>
+</body>
+
 </html>
