--- a/template/index.tpl.html
+++ b/template/index.tpl.html
@@ -98,9 +98,9 @@
 							</li>-->
 						<li class="nav-item">
 							<!--<a href="tg://resolve?domain=Valeria_Fadeeva_me" target="_blank" class="nav-link">-->
-							<a href="https://t.me/Valeria_Fadeeva_me" target="_blank" class="nav-link"></a>
-							<i class="fab fa-telegram"
-								style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> Telegram
+							<a href="https://t.me/Valeria_Fadeeva_me" target="_blank" class="nav-link">
+								<i class="fab fa-telegram"
+									style="background-color: #ffffff; color: #2ba4df; border-radius: 50%;"></i> Telegram
 							</a>
 						</li>
 						<li class="nav-item">
