--- a/template/_main_page_.tpl.html
+++ b/template/_main_page_.tpl.html
@@ -1,144 +1,150 @@
-					<div class="blog-post clearfix">
-						<h4 class="blog-post-title">Обо мне</h4>
-						<p class="blog-post-meta"></p>
+<div class="blog-post clearfix">
+	<h4 class="blog-post-title">Обо мне</h4>
+	<p class="blog-post-meta"></p>
 
-						<div class="row">
+	<div class="row">
 
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%;">
-									<div class="card-body" style="text-align: center;">
-										<img src="/storage/image/user/avatar/Valeria Fadeeva/avatar_square_1.png" style="width: 10rem; height: 10rem; border-radius: 50%;">
-									</div>
-									<div class="card-header center">Валерия Фадеева</div>
-								</div>
-							</div>
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%;">
+				<div class="card-body" style="text-align: center;">
+					<img src="/storage/image/user/avatar/Valeria Fadeeva/avatar_square_1.png"
+						style="width: 10rem; height: 10rem; border-radius: 50%;">
+				</div>
+				<div class="card-header center">Валерия Фадеева</div>
+			</div>
+		</div>
 
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%">
-									<div class="card-body">
-										<p class="card-text">
-											Я - программист и системный администратор.
-										</p>
-										<p class="card-text">
-											В моем багаже есть место для
-										</p>
-										<p class="card-text">
-											Python, Rust, PHP, JavaScript, HTML5, CSS3, Bash, Bat
-										</p>
-										<p class="card-text">
-											Linux, IPTables, DHCPD, Nginx, Apache, PHP-fpm, MySQL, PowerDNS и других страшных слов.
-										</p>
-										<p class="card-text">
-											Мой опыт работы: программирование и системное администрирование Linux серверов и MS AD и Windows рабочих станций.
-										</p>
-									</div>
-								</div>
-							</div>
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-body">
+					<p class="card-text">
+						Имею хорошие базовые знания по языкам программирования, базам данных, сетям, устройству
+						компьютера, работе операционных
+						систем.
+					</p>
+					<p class="card-text">
+						Изучаю и программирую на Python, Rust, PHP, JavaScript, TypeScript.
+					</p>
+					<p class="card-text">
+						Создаю продукты для себя и для людей, делюсь знаниями, принимаю подписки, лайки и
+						<a href="https://donate.stream/ya4100115921160758" target="_blank">донаты</a>.
+					</p>
+				</div>
+			</div>
+		</div>
 
-							<div class="col-sm-12 col-md-12">
-								<div class="card" style="width: 100%">
-									<div class="card-header">Products:</div>
-									<div class="card-body">
-										<div style="--aspect-ratio:16/9;">
-											<iframe width="560" height="315" src="https://www.youtube.com/embed/w2iepQrS6Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%">
-									<div class="card-header">Developer:</div>
-									<div class="card-body">
-										<h5 class="card-title"></h5>
-										<div class="card-text">
-											<ul>
-												<li>Python</li>
-												<ul>
-													<li>OpenCV</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/pdf" target="_blank">pdf</a></li>
-													</ul>
-													<li>Requests</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/check-links-status-from-Irbis-951-fields" target="_blank">check-links-status-from-Irbis-951-fields</a></li>
-													</ul>
-													<li>PyQT</li>
-												</ul>
-												<li>Rust</li>
-												<ul>
-													<li>FLTK</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/image-viewer" target="_blank">image viewer</a></li>
-													</ul>
-													<li>notify, sysinfo</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/folder-watcher-and-app-launcher" target="_blank">folder watcher and app launcher</a></li>
-													</ul>
-													<li>std::process, std::env, dotenv</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/app-launcher" target="_blank">app launcher</a></li>
-													</ul>
-												</ul>
-												<li>PHP</li>
-												<ul>
-													<li>PDO, templates, composer</li>
-													<ul>
-														<li><a href="https://github.com/Valeria-Fadeeva/valeria.fadeeva.me" target="_blank">valeria.fadeeva.me</a></li>
-													</ul>
-												</ul>
-												<li>JavaScript</li>
-												<li>MySQL</li>
-												<li>SQLite</li>
-												<li>HTML5</li>
-												<li>CSS3</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%">
-									<div class="card-header">System administrator:</div>
-									<div class="card-body">
-										<h5 class="card-title"></h5>
-										<div class="card-text">
-											<ul>
-												<li>Linux</li>
-												<li>IPTables</li>
-												<li>DHCPD</li>
-												<li>Nginx</li>
-												<li>Apache</li>
-												<li>PHP-fpm</li>
-												<li>MariaDB</li>
-												<li>PowerDNS</li>
-												<li>Bash</li>
-												<li>Bat</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%">
-									<div class="card-header">Location:</div>
-									<div class="card-body">
-										<h5 class="card-title"></h5>
-											<div class="card-text"><i class="fas fa-map-marker-alt"></i> Russia, Ekaterinburg</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="col-sm-12 col-md-6">
-								<div class="card" style="width: 100%">
-									<div class="card-header">Thanks:</div>
-									<div class="card-body">
-										<h5 class="card-title"></h5>
-											<div class="card-text">Приятного дня! =<^.^>=</div>
-									</div>
-								</div>
-							</div>
-						</div>
+		<div class="col-sm-12 col-md-12">
+			<div class="card" style="width: 100%">
+				<div class="card-header">Products:</div>
+				<div class="card-body">
+					<div style="--aspect-ratio:16/9;">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/w2iepQrS6Ow"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
 					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-header">Developer:</div>
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<div class="card-text">
+						<ul>
+							<li>Python</li>
+							<ul>
+								<li>OpenCV</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/pdf" target="_blank">pdf</a></li>
+								</ul>
+								<li>Requests</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/check-links-status-from-Irbis-951-fields"
+											target="_blank">check-links-status-from-Irbis-951-fields</a></li>
+								</ul>
+								<li>PyQT</li>
+							</ul>
+							<li>Rust</li>
+							<ul>
+								<li>FLTK</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/image-viewer" target="_blank">image
+											viewer</a></li>
+								</ul>
+								<li>notify, sysinfo</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/folder-watcher-and-app-launcher"
+											target="_blank">folder watcher and app launcher</a></li>
+								</ul>
+								<li>std::process, std::env, dotenv</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/app-launcher" target="_blank">app
+											launcher</a></li>
+								</ul>
+							</ul>
+							<li>PHP</li>
+							<ul>
+								<li>PDO, templates, composer</li>
+								<ul>
+									<li><a href="https://github.com/Valeria-Fadeeva/valeria.fadeeva.me"
+											target="_blank">valeria.fadeeva.me</a></li>
+								</ul>
+							</ul>
+							<li>JavaScript</li>
+							<li>MySQL</li>
+							<li>SQLite</li>
+							<li>HTML5</li>
+							<li>CSS3</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-header">System administrator:</div>
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<div class="card-text">
+						<ul>
+							<li>Linux</li>
+							<li>IPTables</li>
+							<li>DHCPD</li>
+							<li>Nginx</li>
+							<li>Apache</li>
+							<li>PHP-fpm</li>
+							<li>MariaDB</li>
+							<li>PowerDNS</li>
+							<li>Bash</li>
+							<li>Bat</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-header">Location:</div>
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<div class="card-text"><i class="fas fa-map-marker-alt"></i> Russia, Ekaterinburg</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-header">Thanks:</div>
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<div class="card-text">Приятного дня! =<^.^>=</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
