--- a/template/_main_page_.tpl.html
+++ b/template/_main_page_.tpl.html
@@ -19,8 +19,7 @@
 				<div class="card-body">
 					<p class="card-text">
 						Имею хорошие базовые знания по языкам программирования, базам данных, сетям, устройству
-						компьютера, работе операционных
-						систем.
+						компьютера, работе операционных систем, виртуализации, системам контроля версий.
 					</p>
 					<p class="card-text">
 						Изучаю и программирую на Python, Rust, PHP, JavaScript, TypeScript.
