--- a/template/_main_page_.tpl.html
+++ b/template/_main_page_.tpl.html
@@ -32,7 +32,21 @@
 			</div>
 		</div>
 
-		<div class="col-sm-12 col-md-12">
+		<div class="col-sm-12 col-md-6">
+			<div class="card" style="width: 100%">
+				<div class="card-header">Products:</div>
+				<div class="card-body">
+					<div style="--aspect-ratio:16/9;">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Bs1gLrFPDyI"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-12 col-md-6">
 			<div class="card" style="width: 100%">
 				<div class="card-header">Products:</div>
 				<div class="card-body">
